--- a/website_pinetwork_games_odoo/i18n/es.po
+++ b/website_pinetwork_games_odoo/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-27 19:44+0000\n"
-"PO-Revision-Date: 2025-11-27 19:44+0000\n"
+"POT-Creation-Date: 2025-12-02 19:37+0000\n"
+"PO-Revision-Date: 2025-12-02 19:37+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -617,17 +617,54 @@ msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
-msgid "<br/><strong>Humanity Book</strong> ("
+msgid ""
+"<br/><strong>Aprende Inglés hoy (para Hispanohablantes)<br/> (ASIN: "
+"B0F7792QFW and ASIN: B0F79L26F6)<br/> (ISBN: 979-8282175301)</strong><br/> ("
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
-msgid "<br/><strong>La voz de los pensamientos</strong> ("
+msgid ""
+"<br/><strong>Cómo crear tu marca personal by Cesar - OpenSource Expert<br/> "
+"(ASIN: B0F79N2ZWQ and ASIN: B0F7G4RV6Y)<br/> (ISBN: "
+"979-8282242003)</strong><br/> ("
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
-msgid "<br/><strong>Telepathic Treatises</strong> ("
+msgid ""
+"<br/><strong>How to develop a Pi App (webapp) on the Pi Network<br/> (ASIN: "
+"B0DK3NJ23V and ASIN: B0DK4N3XTB)<br/> (ISBN: 979-8343272321)</strong><br/> ("
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid ""
+"<br/><strong>Mastering Google Gemini AI y NotebookLM<br/> (ASIN: B0G4GZMTND "
+"and ASIN: B0G4H6W7PX)<br/> (ISBN: 979-8276636375)</strong><br/> ("
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid ""
+"<br/><strong>My Sci and Sci-Fi Books' Collection 2025 - Mi Colección de "
+"Libros Sci y Sci-Fi 2025<br/> (ASIN: B0FPPVRGWG and ASIN: B0FPX3HS2M)<br/> "
+"(ISBN: 979-8263738587)</strong><br/> ("
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid ""
+"<br/><strong>Odoo Technical Training en Español<br/> (ASIN: B0DJVY51LS and "
+"ASIN: B0DJX718Q2)<br/> (ISBN: 979-8342822534)</strong><br/> ("
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid ""
+"<br/><strong>Sudoku Notebook Vol. 1<br/> (ASIN: B0G4L8YGY3 and ASIN: "
+"B0G4L9T3J5)<br/> (ISBN: 979-8276786056 and ISBN: "
+"979-8276787473)</strong><br/> ("
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1188,6 +1225,20 @@ msgid ""
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+msgid ""
+"<strong translate=\"no\">test.latin-chain.com/latinchain-mainnet-"
+"redirect</strong>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+msgid ""
+"<strong translate=\"no\">test.latin-chain.com/latinchain-onlymainnet-"
+"redirect</strong>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "<strong>#LatinChain #Apps 🚀</strong>"
 msgstr ""
@@ -1668,8 +1719,18 @@ msgid "Blockrain"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid "Books compilation"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid "Bubble Shooter"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid "Business improvement"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1890,13 +1951,12 @@ msgstr "Felicidades, ganaste"
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calendarplayer
 msgid ""
-"Convert dates between Gregorian and Mayan (Solar and Universal Calendar) "
-"calendars"
+"Convert dates between Gregorian and Mayan (Long count Calendar) calendars"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
-msgid "Convert from Gregorian to Mayan calendar (Solar and Universal)"
+msgid "Convert from Gregorian to Mayan calendar (Long count)"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -2288,7 +2348,7 @@ msgstr "Ve a uno de los juegos para hacerlo."
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calendarplayer
-msgid "Gregorian to Mayan Calendar (Solar and Universal Calendar) Converter"
+msgid "Gregorian to Mayan Calendar (Long count Calendar) Converter"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -2305,6 +2365,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.sudoku
 msgid "Hard puzzle"
 msgstr "Juego difícil"
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid "Hardcover"
+msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.newsplayer
@@ -2503,6 +2568,11 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid "Language: Language Learning."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid "Languages"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -3215,6 +3285,11 @@ msgid "Paid Games:"
 msgstr "Juegos pagos:"
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid "Paperback"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.partners
 msgid ""
 "Partners list. To be on this list, contact to this email: "
@@ -3497,6 +3572,11 @@ msgid "Professional Video Player"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid "Puzzles"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid "RadioForUs"
 msgstr ""
@@ -3519,11 +3599,6 @@ msgid ""
 msgstr ""
 "Lee cuatro secciones: Membresía (por qué suscribirte), Reglas (normas), "
 "Winners Board (winners board), y Niveles (cómo obtener puntos)."
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
-msgid "Read more"
-msgstr "Leer más"
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
@@ -3649,11 +3724,6 @@ msgstr "Salvar Notación PGN:"
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.chess
 msgid "Save PNG"
 msgstr "Salvar PNG"
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
-msgid "Sci-Fi"
-msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calcplayer
@@ -3913,6 +3983,11 @@ msgid "Team (Volunteers):<br/><br/>"
 msgstr "Equipo (Voluntarios(as)):<br/><br/>"
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid "Tech"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "Technology"
 msgstr ""
@@ -3994,8 +4069,8 @@ msgstr "Muchas gracias!."
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calendarplayer
 msgid ""
-"The Mayan Long (Solar and Universal Calendar) Count calendar consists of "
-"cycles: <span class=\"highlight\">Baktun</span> (144,000 days), <span "
+"The Mayan Long Count calendar consists of cycles: <span "
+"class=\"highlight\">Baktun</span> (144,000 days), <span "
 "class=\"highlight\">Katun</span> (7,200 days), <span "
 "class=\"highlight\">Tun</span> (360 days), <span "
 "class=\"highlight\">Uinal</span> (20 days), and <span "
@@ -4005,8 +4080,8 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calendarplayer
 msgid ""
-"The Mayan calendar (Solar and Universal Calendar) is cyclic. Each cycle "
-"consists of 13 Baktuns (approximately 5,125 years)."
+"The Mayan calendar is cyclic. Each cycle consists of 13 Baktuns "
+"(approximately 5,125 years)."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -4040,22 +4115,22 @@ msgstr ""
 msgid ""
 "This modal (webpage on popup) will be displayed when load on LatinChain "
 "Mainnet (only if you are unverified). This Modal is at: test.latin-"
-"chain.com/latinchain-mainnet-redirect"
+"chain.com/latinchain-onlymainnet-redirect"
 msgstr ""
 "Esta ventana emergente se mostrará al cargar en LatinChain Mainnet (solo si "
 "no está verificado). Esta ventana emergente se encuentra en: test.latin-"
-"chain.com/latinchain-mainnet-redirect"
+"chain.com/latinchain-onlymainnet-redirect"
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
 msgid ""
 "This modal (webpage on popup) will be displayed when load on LatinChain "
-"Mainnet (only if you are unverified). This Modal is at: test.latin-"
-"chain.com/latinchain-onlymainnet-redirect"
+"Testnet (always). This Modal is at: test.latin-chain.com/latinchain-mainnet-"
+"redirect"
 msgstr ""
-"Esta ventana emergente se mostrará al cargar en LatinChain Mainnet (solo si "
-"no está verificado). Esta ventana emergente se encuentra en: test.latin-"
-"chain.com/latinchain-onlymainnet-redirect"
+"Esta ventana emergente se mostrará al cargar en LatinChain "
+"Testnet (siempre). Esta ventana emergente se encuentra en: test.latin-"
+"chain.com/latinchain-mainnet-redirect"
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
@@ -4386,15 +4461,6 @@ msgid "Welcome to LatinChain!."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
-msgid ""
-"Welcome to the reading club: Literary, Sci-Fi and other genres books to "
-"read."
-msgstr ""
-"Bienvenido(a) al club de lectura: Libros literarios, Sci-Fi y otros géneros "
-"para leer."
-
-#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.chess
 msgid "White"
 msgstr "Blancas"
@@ -4474,6 +4540,13 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.certification
 msgid "You can consult this certification at:<br/><br/>"
 msgstr "Puedes consultar esta certificación en:<br/><br/>"
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid ""
+"You can find these, our most notable books by ASIN or ISBN, in bookstores as"
+" Amazon (globally), Iberlibro (Europe) or others around the world."
+msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
@@ -4719,6 +4792,11 @@ msgid "cosh"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
+msgid "eBook"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.pinetwork
 msgid "hours."
@@ -4793,11 +4871,6 @@ msgid "partners"
 msgstr "socios"
 
 #. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
-msgid "podcasts"
-msgstr ""
-
-#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.bubble_shooter
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.chess
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.pinetwork
@@ -4808,6 +4881,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.tetris
 msgid "points."
 msgstr "puntos."
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "reading club"
+msgstr "club de lectura"
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calcplayer
@@ -4878,10 +4956,10 @@ msgstr "¿Quieres hacer Login en LatinChain Platform?"
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calendarplayer
-msgid "🌄 Mayan Calendar (Solar and Universal Calendar)"
+msgid "🌄 Mayan Calendar (Long count Calendar)"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calendarplayer
-msgid "📅 Gregorian Calendar (Solar and Universal Calendar)"
+msgid "📅 Gregorian Calendar (Solar Calendar)"
 msgstr ""
