--- a/website_pinetwork_games_odoo/i18n/website_pinetwork_games_odoo.pot
+++ b/website_pinetwork_games_odoo/i18n/website_pinetwork_games_odoo.pot
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-02 19:37+0000\n"
-"PO-Revision-Date: 2025-12-02 19:37+0000\n"
+"POT-Creation-Date: 2025-12-04 22:40+0000\n"
+"PO-Revision-Date: 2025-12-04 22:40+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -580,8 +580,8 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
 msgid ""
 "<br/><strong>My Sci and Sci-Fi Books' Collection 2025 - Mi Colección de "
-"Libros Sci y Sci-Fi 2025<br/> (ASIN: B0FPPVRGWG and ASIN: B0FPX3HS2M)<br/> "
-"(ISBN: 979-8263738587)</strong><br/> ("
+"Libros Sci y Sci-Fi 2025<br/> (ASIN: B0FPPVRGWG and ASIN: B0G4WK2WT7)<br/> "
+"(ISBN: 979-8277179994)</strong><br/> ("
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -730,6 +730,23 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.videoplayer
 msgid "<i class=\"fas fa-trash-alt mr-1 md:mr-2\"/>Clear Playlist"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
+msgid "<i class=\"ph ph-clock-clockwise\"/> Set to Now"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
+msgid "<i class=\"ph ph-crosshair\"/> My Location (Reset)"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
+msgid ""
+"<i class=\"ph ph-globe-stand text-3xl\"/>\n"
+"                                    Global Time Converter"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1069,6 +1086,13 @@ msgid ""
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid ""
+"<span id=\"turn-indicator\" class=\"turn-dot\" style=\"background-color: var(--red-piece);\"/>\n"
+"                            <span id=\"turn-text\">Red Turn</span>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calendarplayer
 msgid "<span>BCE</span>"
 msgstr ""
@@ -1165,6 +1189,13 @@ msgid "<strong>15 Puzzle Game</strong>"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid ""
+"<strong>Advisor (仕 / 士):</strong> Moves 1 step diagonally. Cannot leave the "
+"Palace."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calcplayer
 msgid ""
 "<strong>Any root (ⁿ√)</strong>: First enter the index, then press ⁿ√, then "
@@ -1212,6 +1243,18 @@ msgid "<strong>Can watch Worldwide Sport Results</strong>"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid ""
+"<strong>Cannon (炮 / 砲):</strong> Moves like a Chariot, but must jump over "
+"exactly one piece to capture."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "<strong>Chariot (车):</strong> Moves any distance orthogonally."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.certification
 msgid "<strong>Checkers</strong>"
 msgstr ""
@@ -1237,8 +1280,22 @@ msgid "<strong>Domino</strong>"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid ""
+"<strong>Elephant (相 / 象):</strong> Moves 2 steps diagonally. Cannot cross "
+"the River. Eye can be blocked."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calcplayer
 msgid "<strong>Example for ⁴√16</strong>: Press 4 → ⁿ√ → 16 → = (result: 2)"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid ""
+"<strong>Flying General:</strong> The two Generals cannot face each other on "
+"the same open file without a piece in between."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1249,6 +1306,20 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.certification
 msgid "<strong>Games learning: Chess, Sudoku, Snake</strong>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid ""
+"<strong>General (帅 / 将):</strong> Moves 1 step orthogonally. Cannot leave "
+"the Palace (3x3 grid)."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid ""
+"<strong>Horse (马):</strong> Moves 1 step orthogonally + 1 step diagonally. "
+"Can be blocked."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1336,6 +1407,13 @@ msgid "<strong>Professionals</strong>"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid ""
+"<strong>River:</strong> Elephants cannot cross. Soldiers gain side movement "
+"after crossing."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid "<strong>Rules</strong>"
 msgstr ""
@@ -1343,6 +1421,13 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.certification
 msgid "<strong>Snake</strong>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid ""
+"<strong>Soldier (兵 / 卒):</strong> Moves 1 step forward. After crossing the "
+"river, can also move sideways."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1389,6 +1474,13 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid "<strong>Winners Board</strong>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid ""
+"<text x=\"250\" y=\"520\" fill=\"#5d4037\" font-size=\"50\" font-family=\"SimKai, serif\" text-anchor=\"middle\">楚 河</text>\n"
+"                                <text x=\"650\" y=\"520\" fill=\"#5d4037\" font-size=\"50\" font-family=\"SimKai, serif\" text-anchor=\"middle\" transform=\"rotate(180 650 520)\">漢 界</text>"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1687,6 +1779,11 @@ msgid "Characters: <span id=\"charCount\">0</span> / 4000"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "Check!"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid "Checkers"
 msgstr ""
@@ -1726,6 +1823,11 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.languagelearning
 msgid "Choose your language journey!"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "Choose your side to begin:"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1779,9 +1881,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.test_your_brain
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.tetris
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.texttospeechplayer
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.videoplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webcamplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webtorrent
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid "Click here"
 msgstr ""
 
@@ -1792,6 +1896,7 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.pinetwork
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.radioforus
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.test_your_brain
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid "Close"
 msgstr ""
 
@@ -1816,6 +1921,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.pinetwork
 msgid "Congrats, you won"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "Convert Timezones"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1883,6 +1993,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "DONATE"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
+msgid "Date &amp; Time"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1985,9 +2100,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.test_your_brain
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.tetris
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.texttospeechplayer
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.videoplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webcamplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webtorrent
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid "Donate to unlock Apps"
 msgstr ""
 
@@ -2101,6 +2218,11 @@ msgid "Flip Board"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
+msgid "From (Origin)"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.videoplayer
 msgid "Fullscreen"
 msgstr ""
@@ -2128,6 +2250,11 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.gameslearning
 msgid "Game Learning Path"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "Game Over"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -2192,9 +2319,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.test_your_brain
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.tetris
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.texttospeechplayer
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.videoplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webcamplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webtorrent
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid "Go to Pi Browser"
 msgstr ""
 
@@ -2282,6 +2411,11 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mahjong
 msgid "Hint"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "How to Play"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -2617,9 +2751,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.test_your_brain
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.tetris
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.texttospeechplayer
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.videoplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webcamplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webtorrent
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid "Loading..."
 msgstr ""
 
@@ -2707,6 +2843,11 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mahjong
 msgid "Mahjong solitaire"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "Main Menu"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -3073,9 +3214,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.test_your_brain
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.tetris
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.texttospeechplayer
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.videoplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webcamplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webtorrent
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid "Or here to test this app"
 msgstr ""
 
@@ -3254,6 +3397,11 @@ msgid ""
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "Pieces"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.partners
 msgid "Piketplace:"
 msgstr ""
@@ -3290,6 +3438,11 @@ msgid "Play Again"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "Play BLACK (AI Moves First)"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "Play Chess"
 msgstr ""
@@ -3304,6 +3457,11 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "Play Other Games"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "Play RED (Move First)"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -3430,6 +3588,11 @@ msgid "Real-time Object Detection on Webcam"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "Red Wins!"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.checkers
 msgid ""
 "Red: <span id=\"red-score\">12</span> | Black: <span id=\"black-"
@@ -3454,6 +3617,7 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latincrush
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.pingpong
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid "Reset Game"
 msgstr ""
 
@@ -3472,6 +3636,11 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.checkers
 msgid "Restart Game"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
+msgid "Result"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -3562,8 +3731,23 @@ msgid ""
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
+msgid "Search and convert any city worldwide"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "Search apps"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
+msgid "Search city (e.g. New York)..."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
+msgid "Search city (e.g. Tokyo)..."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -3665,6 +3849,11 @@ msgid "Spanish, English, Korean, Chinese Mandarin, Japanese, Vietnamese"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "Special Rules"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "Sport results"
 msgstr ""
@@ -3722,6 +3911,11 @@ msgid "Super Snake"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
+msgid "Swap zones"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webcamplayer
 msgid "Switch Camera"
 msgstr ""
@@ -3739,6 +3933,11 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "TEXT-TO-SPEECH READER"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "TIMEZONE CONVERTER"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -3904,6 +4103,13 @@ msgid "The following certifies that the Pioneer"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid ""
+"The goal is to capture the enemy <strong>General (King)</strong>. Red always"
+" moves first."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calcplayer
 msgid "The result display remains fixed when scrolling"
 msgstr ""
@@ -3945,6 +4151,16 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.sudoku
 msgid "Time"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "Timezone"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
+msgid "To (Destination)"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -4297,6 +4513,16 @@ msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "XIANGQI (Chinese chess)"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
+msgid "Xiangqi"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "Xiomary"
 msgstr ""
 
@@ -4402,9 +4628,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.test_your_brain
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.tetris
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.texttospeechplayer
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.timezoneplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.videoplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webcamplayer
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webtorrent
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid "You need to access from Pi Browser."
 msgstr ""
 
