--- a/website_pinetwork_games_odoo/i18n/es.po
+++ b/website_pinetwork_games_odoo/i18n/es.po
@@ -3098,7 +3098,7 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "Hello Pioneers, we need your help,"
-msgstr ""
+msgstr "Hola Pioneros, necesitamos tu ayuda,"
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
@@ -3107,6 +3107,9 @@ msgid ""
 "verified monthly on Mainnet</strong> to keep paying our servers. Click here "
 "to get verified and fund our operations."
 msgstr ""
+"Hola, pioneros, necesitamos su ayuda. <strong>Necesitamos al menos 400 pioneros "
+"verificados mensualmente en la Mainnet</strong> para seguir pagando nuestros "
+"servidores. Hagan clic aquí para verificarse y financiar nuestras operaciones."
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
@@ -5130,7 +5133,7 @@ msgstr "Gracias por tu donación. Fuiste desbloqueado."
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "Thank you pioneers we reached 400 verified users this month!."
-msgstr ""
+msgstr "Gracias pioneros alcanzamos los 400 usuarios verificados este mes!."
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.modal
@@ -6117,7 +6120,7 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "of 400) pioneers verified monthly on Mainnet"
-msgstr ""
+msgstr "de 400) pioneros verificados mensualmente en Mainnet"
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
@@ -6183,6 +6186,9 @@ msgid ""
 "to keep paying our servers. Click here to get verified and fund our "
 "operations. (This notification will disappear once you get verified)"
 msgstr ""
+"para seguir pagando a nuestros servidores. Haz clic aquí para verificar "
+"tu cuenta y financiar nuestras operaciones. (Esta notificación "
+"desaparecerá una vez que te verifiques)."
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
@@ -6192,7 +6198,7 @@ msgstr "para verlo funcionando.<br/>"
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "we need at least 400 (now"
-msgstr ""
+msgstr "necesitamos al menos 400 (ahora"
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
