--- a/website_pinetwork_games_odoo/i18n/es.po
+++ b/website_pinetwork_games_odoo/i18n/es.po
@@ -3107,7 +3107,7 @@ msgid ""
 "verified monthly on Mainnet</strong> to keep paying our servers. Click here "
 "to get verified and fund our operations."
 msgstr ""
-"Hola, pioneros, necesitamos su ayuda. <strong>Necesitamos al menos 400 pioneros "
+"Hola Pioneros, necesitamos su ayuda. <strong>Necesitamos al menos 400 pioneros "
 "verificados mensualmente en la Mainnet</strong> para seguir pagando nuestros "
 "servidores. Hagan clic aquí para verificarse y financiar nuestras operaciones."
 
