--- a/website_pinetwork_games_odoo/i18n/es.po
+++ b/website_pinetwork_games_odoo/i18n/es.po
@@ -6186,7 +6186,7 @@ msgid ""
 "to keep paying our servers. Click here to get verified and fund our "
 "operations. (This notification will disappear once you get verified)"
 msgstr ""
-"para seguir pagando a nuestros servidores. Haz clic aquí para verificar "
+"para seguir pagando nuestros servidores. Haz clic aquí para verificar "
 "tu cuenta y financiar nuestras operaciones. (Esta notificación "
 "desaparecerá una vez que te verifiques)."
 
