--- a/website_pinetwork_games_odoo/i18n/es.po
+++ b/website_pinetwork_games_odoo/i18n/es.po
@@ -3246,6 +3246,8 @@ msgid ""
 "In order to maintain our servers, we ask you to watch a Rewarded Ad until "
 "the end, we will give you a reward at the end of the ad."
 msgstr ""
+"Para mantener nuestros servidores, te pedimos que veas un anuncio con "
+"recompensa hasta el final. Te daremos una recompensa al final del anuncio."
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.languagelearning
@@ -6255,7 +6257,7 @@ msgstr "¿Quieres hacer Login en LatinChain Platform?"
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.new_header
 msgid "▶️ Watch a video to claim your reward?."
-msgstr ""
+msgstr "▶️ Ver un vídeo para reclamar tu recompensa?."
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.iqtest
